--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -11,10 +11,13 @@
 </head>
 <body>
   <app-root></app-root>
+  <script src="assets/js/jquery.js" defer></script>
+  <script src="assets/js/main.js" defer></script>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   <script src="https://www.paypal.com/sdk/js?client-id=AcHhw6grjNoQy2ip8vBzMUhNn75XI0aI6SbtbLlx5meqGLvfuaN3rlNDKHOBRozavZMathjASN_P0tDS&vault=true"></script>
+
 
 
   
